--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ body {font-family: "Lato", sans-serif}
     <a href="#HOME" class="w3-bar-item w3-button w3-padding-large">HOME</a>
     <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
     <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
-    <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CV</a>
+    <!-- <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CV</a> -->
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
     <div class="w3-dropdown-hover w3-hide-small">
       <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
@@ -157,11 +157,13 @@ body {font-family: "Lato", sans-serif}
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
         <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
-        <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9825 5967<br>
+        <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
         <i class="fa fa-envelope" style="width:30px"> </i> Email: IloveSyed@gmail.com<br>
       </div>
       <div class="w3-col m6">
-        <form action="/action_page.php" target="_blank">
+        <button src="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing"
+        class="w3-button w3-black w3-section w3-right" type="submit">View My CV</button>
+        <!-- <form action="/action_page.php" target="_blank">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
@@ -172,7 +174,7 @@ body {font-family: "Lato", sans-serif}
           </div>
           <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
           <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form>
+        </form> -->
       </div>
     </div>
   </div>
@@ -181,7 +183,7 @@ body {font-family: "Lato", sans-serif}
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/map.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="/w3images/background.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
