--- a/index.html
+++ b/index.html
@@ -161,9 +161,7 @@ body {font-family: "Lato", sans-serif}
         <i class="fa fa-envelope" style="width:30px"> </i> Email: IloveSyed@gmail.com<br>
       </div>
       <div class="w3-col m6">
-        <button src="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing"
-        class="w3-button w3-black w3-section w3-right" type="submit">View My CV</button>
-        <!-- <form action="/action_page.php" target="_blank">
+        <form action="/action_page.php" target="_blank">
           <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
             <div class="w3-half">
               <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
@@ -174,11 +172,12 @@ body {font-family: "Lato", sans-serif}
           </div>
           <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
           <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
-        </form> -->
+        </form>
       </div>
     </div>
   </div>
-  
+  <iframe src="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" 
+  style="width:600px; height:500px;" frameborder="0"></iframe>
 <!-- End Page Content -->
 </div>
 
