--- a/index.html
+++ b/index.html
@@ -176,13 +176,11 @@ body {font-family: "Lato", sans-serif}
       </div>
     </div>
   </div>
-  <iframe src="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" 
-  style="width:600px; height:500px;" frameborder="0"></iframe>
 <!-- End Page Content -->
 </div>
 
 <!-- Image of location/map -->
-<img src="/w3images/background.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+<img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
@@ -192,7 +190,8 @@ body {font-family: "Lato", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+  <p class="w3-medium">View my CV <a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing"  
+    target="_blank"></a></p>
 </footer>
 
 <script>
