--- a/index.html
+++ b/index.html
@@ -28,11 +28,13 @@ body {font-family: "Lato", sans-serif}
       <div class="w3-dropdown-content w3-bar-block w3-card-4">
         <a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" 
         class="w3-bar-item w3-button">Resume</a>
-        <a href="#" class="w3-bar-item w3-button">Extras</a>
-        <a href="#" class="w3-bar-item w3-button">Media</a>
+        <a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" 
+        class="w3-bar-item w3-button">Linkedin</a>
+        <a href="https://drive.google.com/drive/folders/1mG6-pTAdaueMibFldCXdw4qGqOpuqS_K?usp=sharing" 
+        class="w3-bar-item w3-button">Art</a>
       </div>
     </div>
-    <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a>
+    <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
   </div>
 </div>
 
@@ -46,13 +48,16 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
-
+  <!-- 3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small -->
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
     <img src="/w3images/astronaut.png" style="width:100%">
-    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
-      <h3>About Me</h3>
-      <p><b>I am Darren Soh and I love coding. Thank you for your kind attention</b></p>   
+    <div class="anim-typewriter line-1 hero-image absolute mx-auto 
+    w-full in set-x-0 text-xl md:text-5xl text-center leading-6 translate-y-12">
+      <span>ReadMe: I am</span>
+      <span class="font-bold">Darren Soh</span>
+      <span>and I love</span>  
+      <span class="font-family"> Coding.</span>
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
@@ -191,8 +196,6 @@ body {font-family: "Lato", sans-serif}
   <i class="fa fa-pinterest-p w3-hover-opacity"></i>
   <i class="fa fa-twitter w3-hover-opacity"></i>
   <i class="fa fa-linkedin w3-hover-opacity"></i>
-  <p class="w3-medium">View my CV <a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing"  
-    target="_blank"></a></p>
 </footer>
 
 <script>
