--- a/index.html
+++ b/index.html
@@ -48,16 +48,12 @@ body {font-family: "Lato", sans-serif}
 
 <!-- Page content -->
 <div class="w3-content" style="max-width:2000px;margin-top:46px">
-  <!-- 3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small -->
   <!-- Automatic Slideshow Images -->
   <div class="mySlides w3-display-container w3-center">
     <img src="/w3images/astronaut.png" style="width:100%">
-    <div class="anim-typewriter line-1 hero-image absolute mx-auto 
-    w-full in set-x-0 text-xl md:text-5xl text-center leading-6 translate-y-12">
-      <span>ReadMe: I am</span>
-      <span class="font-bold">Darren Soh</span>
-      <span>and I love</span>  
-      <span class="font-family"> Coding.</span>
+    <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
+      <h3>About Me</h3>
+      <p><b>Darren Soh</b></p>    
     </div>
   </div>
   <div class="mySlides w3-display-container w3-center">
@@ -74,7 +70,13 @@ body {font-family: "Lato", sans-serif}
       <p><b>Android Programming, React, Spring Boot, Spring Data JPA, PostGreSQL, MYSQL, Restful API, Apache Tomcat</b></p>    
     </div>
   </div>
-
+  <div class="anim-typewriter line-1 hero-image absolute mx-auto 
+  w-full in set-x-0 text-xl md:text-5xl text-center leading-6 translate-y-12">
+    <span>ReadMe: I am</span>
+    <span class="font-bold">Darren Soh</span>
+    <span>and I love</span>  
+    <span class="font-family"> Coding.</span>
+  </div>
   <!-- The SWE Section -->
   <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="SWE">
     <h2 class="w3-wide">SOFTWARE ENGINEERING PROJECTS</h2>
