--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 body {font-family: "Lato", sans-serif;
 background: #333;
 padding-top: 5em;
-display:flex;
-justify-content: center;}
+display:flex;}
 .mySlides {display: none}
 </style>
 </head>
