--- a/index.html
+++ b/index.html
@@ -1,15 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>DSOHJH</title>
-  <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
-  <meta name="author" content="Vincent Garreau" />
+  <!-- <meta name="description" content="particles.js is a lightweight JavaScript library for creating particles.">
+  <meta name="author" content="Vincent Garreau" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
 </head>
 <body>
-
+<!-- Navbar -->
+<div class="w3-top">
+    <div class="w3-bar w3-black w3-card">
+      <a class="w3-bar-item w3-button w3-padding-large w3-hide-medium w3-hide-large w3-right" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+      <a href="#HOME" class="w3-bar-item w3-button w3-padding-large">HOME</a>
+      <a href="#SWE" class="w3-bar-item w3-button w3-padding-large w3-hide-small">SWE</a>
+      <a href="#ML" class="w3-bar-item w3-button w3-padding-large w3-hide-small">ML</a>
+      <!-- <a href="#CV" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CV</a> -->
+      <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large w3-hide-small">CONTACT</a>
+      <div class="w3-dropdown-hover w3-hide-small">
+        <button class="w3-padding-large w3-button" title="More">MORE <i class="fa fa-caret-down"></i></button>     
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="https://drive.google.com/file/d/1ecOtJ2PfTUjV5Ln-1ORLhrZiZt7FqeEf/view?usp=sharing" 
+          class="w3-bar-item w3-button">Resume</a>
+          <a href="https://www.linkedin.com/in/darren-soh-170999dsohjh/" 
+          class="w3-bar-item w3-button">Linkedin</a>
+          <a href="https://drive.google.com/drive/folders/1mG6-pTAdaueMibFldCXdw4qGqOpuqS_K?usp=sharing" 
+          class="w3-bar-item w3-button">Art</a>
+        </div>
+      </div>
+      <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
+    </div>
+  </div>
 <!-- count particles -->
 <div class="count-particles">
   <span class="js-count-particles">--</span> particles
