--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     </div>
   </div>
 <!-- count particles -->
-<div class="count-particles">
+<!-- <div class="count-particles">
   <span class="js-count-particles">--</span> particles
-</div>
+</div> -->
 
 <!-- particles.js container -->
-<div id="particles-js"></div>
+<!-- <div id="particles-js"></div> -->
 
 <!-- scripts -->
 <script src="../particles.js"></script>
