--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 </div> -->
 
 <!-- particles.js container -->
-<!-- <div id="particles-js"></div> -->
+<div id="particles-js"></div>
 
 <!-- scripts -->
 <script src="../particles.js"></script>
