--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!-- stats.js -->
 <script src="js/lib/stats.js"></script>
-<script>
+<!-- <script>
   var count_particles, stats, update;
   stats = new Stats;
   stats.setMode(0);
@@ -63,7 +63,7 @@
     }
     requestAnimationFrame(update);
   };
-  requestAnimationFrame(update);
+  requestAnimationFrame(update); -->
 </script>
 
 </body>
