--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta name="author" content="Vincent Garreau" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="stylesheet" media="screen" href="css/style.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 </head>
 <body>
 <!-- Navbar -->
