--- a/index.html
+++ b/index.html
@@ -33,18 +33,129 @@
       <!-- <a href="javascript:void(0)" class="w3-padding-large w3-hover-red w3-hide-small w3-right"><i class="fa fa-search"></i></a> -->
     </div>
   </div>
-<!-- count particles -->
-<!-- <div class="count-particles">
-  <span class="js-count-particles">--</span> particles
-</div> -->
+
+  <!-- Navbar on small screens (remove the onclick attribute if you want the navbar to always show on top of the content when clicking on the links) -->
+<div id="navDemo" class="w3-bar-block w3-black w3-hide w3-hide-large w3-hide-medium w3-top" style="margin-top:46px">
+    <a href="#SWE" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">SWE</a>
+    <a href="#ML" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">ML</a>
+    <a href="#CV" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CV</a>
+    <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
+  </div>
 
 <!-- particles.js container -->
 <div id="particles-js"></div>
+<!--#SWE-->
+<div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="SWE">
+  <h2 class="w3-wide">SOFTWARE ENGINEERING PROJECTS</h2>
+  <p class="w3-opacity"><i>Life is better with coding!</i></p>
+  <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+    ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
+    adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <div class="w3-row w3-padding-32">
+    <div class="w3-third">
+      <p>Android</p>
+      <img src="/w3images/android.jpg" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    </div>
+    <div class="w3-third">
+      <p>MYSQL</p>
+      <img src="/w3images/mysql" class="w3-round w3-margin-bottom" alt="Random Name" style="width:60%">
+    </div>
+    <div class="w3-third">
+      <p>Name</p>
+      <img src="/w3images/bandmember.jpg" class="w3-round" alt="Random Name" style="width:60%">
+    </div>
+  </div>
+</div>
+  <!-- #ML -->
+<div class="w3-black" id="ML">
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+    <h2 class="w3-wide w3-center">MACHINE LEARNING</h2>
+    <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
+
+    <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/newyork.jpg" alt="New York" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>MC for ART</b></p>
+          <p class="w3-opacity">IEEE Hackathon</p>
+          <p>telebot with google script API. CNN model in google cloud, Image Classification, Keras</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/paris.jpg" alt="Paris" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Not now lizards!</b></p>
+          <p class="w3-opacity">MLDA</p>
+          <p>Computer Vision, Arduino, ROS</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">In progress</button>
+        </div>
+      </div>
+      <div class="w3-third w3-margin-bottom">
+        <img src="/w3images/sanfran.jpg" alt="San Francisco" style="width:100%" class="w3-hover-opacity">
+        <div class="w3-container w3-white">
+          <p><b>Titanic Disaster Prediction</b></p>
+          <p class="w3-opacity"></p>
+          <p>ML models, Data cleaning, Variance Testing, Feature engineering.</p>
+          <button class="w3-button w3-black w3-margin-bottom" onclick="document.getElementById('ticketModal').style.display='block'">View Project</button>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <!-- #CONTACT -->
+  <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="CONTACT">
+    <h2 class="w3-wide w3-center">CONTACT</h2>
+    <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
+    <div class="w3-row w3-padding-32">
+      <div class="w3-col m6 w3-large w3-margin-bottom">
+        <i class="fa fa-map-marker" style="width:30px"></i> Singapore, SG<br>
+        <i class="fa fa-phone" style="width:30px"></i> Phone: +65 9018 1182<br>
+        <i class="fa fa-envelope" style="width:30px"> </i> Email: IloveSyed@gmail.com<br>
+      </div>
+      <div class="w3-col m6">
+        <form action="/action_page.php" target="_blank">
+          <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Name" required name="Name">
+            </div>
+            <div class="w3-half">
+              <input class="w3-input w3-border" type="text" placeholder="Email" required name="Email">
+            </div>
+          </div>
+          <input class="w3-input w3-border" type="text" placeholder="Message" required name="Message">
+          <button class="w3-button w3-black w3-section w3-right" type="submit">SEND</button>
+        </form>
+      </div>
+    </div>
+  </div>
+<!-- Image of location/map -->
+<img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+  <i class="fa fa-facebook-official w3-hover-opacity"></i>
+  <i class="fa fa-instagram w3-hover-opacity"></i>
+  <i class="fa fa-snapchat w3-hover-opacity"></i>
+  <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+  <i class="fa fa-twitter w3-hover-opacity"></i>
+  <i class="fa fa-linkedin w3-hover-opacity"></i>
+</footer>
 
 <!-- scripts -->
 <script src="../particles.js"></script>
 <script src="js/app.js"></script>
-
+<script
+function myFunction() {
+    var x = document.getElementById("navDemo");
+    if (x.className.indexOf("w3-show") == -1) {
+      x.className += " w3-show";
+    } else { 
+      x.className = x.className.replace(" w3-show", "");
+    }
+  }>
+</script>
 
 </body>
 </html>
