--- a/index.html
+++ b/index.html
@@ -43,7 +43,12 @@
   </div>
 
 <!-- particles.js container -->
-<div id="particles-js"></div>
+<div id="particles-js">
+  <div class="anim-typewriter line-1 hero-image absolute mx-auto w-full in set-x-0 text-xl md:text-5xl text-center leading-6 translate-y-12">
+  <span> Life is greater with</span>
+  <span class = "font-bold">Coding.</span>
+  </div>
+</div>
 <!--#SWE-->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="SWE">
   <h2 class="w3-wide">SOFTWARE ENGINEERING PROJECTS</h2>
