--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   </div>
 
+
+
+  
 <!-- particles.js container -->
 <div id="particles-js">
-  <div class="anim-typewriter line-1 hero-image absolute mx-auto w-full in set-x-0 text-xl md:text-5xl text-center leading-6 translate-y-12">
-  <span> Life is greater with</span>
-  <span class = "font-bold">Coding.</span>
+  <div class="typeWriter">
+  <h1> Life is greater with Coding</h1>
   </div>
 </div>
 <!--#SWE-->
