--- a/index.html
+++ b/index.html
@@ -41,16 +41,15 @@
     <a href="#CV" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CV</a>
     <a href="#CONTACT" class="w3-bar-item w3-button w3-padding-large" onclick="myFunction()">CONTACT</a>
   </div>
-
-
-
   
 <!-- particles.js container -->
 <div id="particles-js">
-  <div class="typeWriter">
-  <h1> Life is greater with Coding</h1>
+  <div class="typewriter">
+    <h1> Life is greater with Coding</h1>
   </div>
 </div>
+
+
 <!--#SWE-->
 <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px" id="SWE">
   <h2 class="w3-wide">SOFTWARE ENGINEERING PROJECTS</h2>
