--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
   </div>
 
 <!-- particles.js container -->
-<div id="particles-js">
+<div id="particles-js"></div>
+<div id="#HOME" class="w3-container" style="background-color: transparent">
+  <div class="centered" style>
+    <div class="typewriter">
+      <h1> Life is greater with Coding</h1>
+    </div>
+  </div>
 </div>
 
 
@@ -136,9 +142,9 @@
 <!-- Image of location/map -->
 <img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
-<div class="typewriter">
+<!-- <div class="typewriter">
   <h1> Life is greater with Coding</h1>
-</div>
+</div> -->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
