--- a/index.html
+++ b/index.html
@@ -43,8 +43,15 @@
   </div>
 
 <!-- particles.js container -->
-<div id="particles-js"></div>
+<!-- <div id="particles-js"></div>
 <div id="#HOME" class="w3-container" style="background-color: transparent">
+  <div class="centered" style>
+    <div class="typewriter">
+      <h1> Life is greater with Coding</h1>
+    </div>
+  </div>
+</div> -->
+<div id="particles-js" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
     <div class="typewriter">
       <h1> Life is greater with Coding</h1>
