--- a/index.html
+++ b/index.html
@@ -43,15 +43,11 @@
   </div>
 
 <!-- particles.js container -->
-<!-- <div id="particles-js"></div>
+<div id="particles-js">
+  <h1> Life is greater with Coding</h1>
+</div>
+
 <div id="#HOME" class="w3-container" style="background-color: transparent">
-  <div class="centered" style>
-    <div class="typewriter">
-      <h1> Life is greater with Coding</h1>
-    </div>
-  </div>
-</div> -->
-<div id="particles-js" class="w3-container" style="background-color: transparent">
   <div class="centered" style>
     <div class="typewriter">
       <h1> Life is greater with Coding</h1>
@@ -85,7 +81,7 @@
   <!-- #ML -->
 <div class="w3-black" id="ML">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-    <h2 class="w3-wide w3-center">MACHINE LEARNING</h2>
+    <h3 class="w3-wide w3-center">MACHINE LEARNING</h3>
     <p class="w3-opacity w3-center"><i>The all seeing eye of Coding</i></p><br>
 
     <div class="w3-row-padding w3-padding-32" style="margin:0 -16px">
@@ -122,7 +118,7 @@
 
   <!-- #CONTACT -->
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="CONTACT">
-    <h2 class="w3-wide w3-center">CONTACT</h2>
+    <h4 class="w3-wide w3-center">CONTACT</h4>
     <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
     <div class="w3-row w3-padding-32">
       <div class="w3-col m6 w3-large w3-margin-bottom">
@@ -149,9 +145,6 @@
 <!-- Image of location/map -->
 <img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
-<!-- <div class="typewriter">
-  <h1> Life is greater with Coding</h1>
-</div> -->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
