--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
 </div>
 
   <!-- #CONTACT -->
+<div class="w3-black" id="CONTACT">
   <div class="w3-container w3-content w3-padding-64" style="max-width:800px" id="CONTACT">
     <h4 class="w3-wide w3-center">CONTACT</h4>
     <p class="w3-opacity w3-center"><i>You have scrolled this far! Thanks for visiting!</i></p>
@@ -155,6 +156,9 @@
       </div>
     </div>
   </div>
+</div>
+
+
 <!-- Image of location/map -->
 <img src="/w3images/SG.jpg" class="w3-image w3-greyscale-min" style="width:100%">
 
